--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ a {
 #profilepic{
 	background-image: url("images/Alec.jpg");
 	background-position: center 10%;
-	background-size: 90%;
+	background-size: 110%;
+	background-repeat: no-repeat;
 	position:relative;
 	width: 15%;
 	height: 180px;
