--- a/style.css
+++ b/style.css
@@ -40,10 +40,10 @@ a {
 	background-position: center 10%;
 	background-size: 110%;
 	background-repeat: no-repeat;
-	position:relative;
-	width: 15%;
-	height: 180px;
 	margin: auto;
+	position: relative;
+	height: 13em;
+	width: 15%;
 	border-radius: 50%;
 }
 
