--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ a {
 	height: 0;
 	padding-bottom: 18%;
 	margin: auto;
+	margin-top: 4%;
 	background-image: url("images/Alec.jpg");
 	background-position: center 10%;
 	background-size: 90%;
