--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 0px;
   margin: 0px;
-  font: 16px 'Quicksand', sans-serif;
+  font: 16px 'Quicksand', 微軟正黑體, sans-serif;
   text-align:center;
   position: relative;
 }
